feat: add perfTest Gradle build command plus additional stats